--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@google-cloud/storage": "^7.18.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "pdf-parse": "^1.1.1"
   }
 }
